2013-06-07  Bastian Maerkisch  <bmaerkisch@web.de>

	More backports from version 4.7

	* src/win/wgraph.c (SaveAsEMF, CopyClip):  Turn off antialiasing during
	export to EMF or clipboard in order not to mix GDI and GDI+ calls.  See
	also change on 2012-07-25.

	* src/win/wgraph.c: Recreate fonts after resizing the graph window.
	This bug causes the plot just to be scaled to the new size, without
	adjusting spacing/borders etc.
	Bugfix.

2013-06-07  Bastian Maerkisch  <bmaerkisch@web.de>

	More backports from version 4.7

	* term/win.trm (WIN_options):  Validate argument to title option.

	* term/win.trm (WIN_filled_polygon): Filled polygon are always closed.
	Ignore the last corner if it's the same as the first one.

	* src/win/wgraph.c: Recreate fonts after resizing the graph window.

2013-06-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxt_sigint_handler):  The wxt terminal
	deadlocks if connection to the X-server is lost (Bug #991).  Ctrl-C
	doesn't break the deadlock because this interrupt handler simply flags
	the signal and waits for the parent process to handle it.  Parent and
	child are thus waiting on each other -> deadlock.  Now we add a test
	for Ctrl-C arriving when the Ctrl-C flag is already set, and exit if
	it happens. Thus hitting Ctrl-C twice breaks the deadlock.
	Not great but better than hanging.
	Bug #991.

2013-05-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c term/cairo.trm term/context.trm term/wxt.trm:
	Calls to strncat were risking buffer overflow by not accounting for the
	terminating '\0'.  (backported from 4.7 patch 2012-11-29)

2013-05-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Treating timedata columns as strings allows
	functions column(N) and column("HEADER") to work on time data.
	Bug #1161

	* src/qtterminal/QtGnuplotScene.cpp: Enhanced text elements were not 
	being added to the current display group, so they were ignored by the