@@ -2,6 +2,10 @@
 
 	More backports from version 4.7
 
+	* src/win/wprinter.c (PrintDlgProc):  Verify that printer info is actually
+	available.
+	Bug 1152.
+
 	* src/win/wgraph.c (SaveAsEMF, CopyClip):  Turn off antialiasing during
 	export to EMF or clipboard in order not to mix GDI and GDI+ calls.  See
 	also change on 2012-07-25.
